[gd_scene load_steps=3 format=3 uid="uid://mte06h2vchrw"]

[ext_resource type="Script" path="res://scene/combat/battle_combat.gd" id="1_tnvye"]
[ext_resource type="Theme" uid="uid://bnxyqifnolrd1" path="res://scene/combat/combat.tres" id="3_yrmua"]

[node name="BattleCombat" type="Node2D"]
process_mode = 1
script = ExtResource("1_tnvye")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = 1376.0
offset_bottom = 738.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.156863)

[node name="Character" type="Node2D" parent="."]

[node name="PlayerMarker" type="Node2D" parent="Character"]
position = Vector2(369, 326)

[node name="EnemyMarker" type="Node2D" parent="Character"]
position = Vector2(991, 326)

[node name="HealthBar" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="HealthBar"]

[node name="Label" type="Label" parent="HealthBar/Player"]
offset_left = 124.0
offset_top = 540.0
offset_right = 198.0
offset_bottom = 567.0
theme = ExtResource("3_yrmua")
text = "Player"

[node name="ProgressBar" type="ProgressBar" parent="HealthBar/Player"]
offset_left = 123.0
offset_top = 570.0
offset_right = 600.0
offset_bottom = 630.0
rounded = true
show_percentage = false

[node name="Label3" type="Label" parent="HealthBar"]
offset_left = 638.0
offset_top = 565.0
offset_right = 711.0
offset_bottom = 624.0
theme = ExtResource("3_yrmua")
theme_override_font_sizes/font_size = 44
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="Node2D" parent="HealthBar"]

[node name="Label2" type="Label" parent="HealthBar/Enemy"]
offset_left = 751.0
offset_top = 539.0
offset_right = 884.0
offset_bottom = 566.0
theme = ExtResource("3_yrmua")
text = "Enemy Slime"

[node name="ProgressBar2" type="ProgressBar" parent="HealthBar/Enemy"]
offset_left = 747.0
offset_top = 570.0
offset_right = 1224.0
offset_bottom = 630.0
show_percentage = false

[node name="Label" type="Label" parent="."]
offset_left = 511.0
offset_top = 30.0
offset_right = 657.0
offset_bottom = 57.0
theme = ExtResource("3_yrmua")
